v0.10.0.0 (WIP)
  - Adds support for reading setup.yml from STDIN
  - Changes to better support SEQUENCEs
v0.9.0.0
  - Fixes DELETE BASE before schema definitions are read (#64)
  - Fixes bugs in table constraint statements (#59)
  - Fixes code that needed O(n^2) in number of SQL objects (#62)
  - Fixes incorrect naming of sequences for SERIAL emulation
  - Adds bash completion install (closes #63)
  - Adds link to example project to README
  - Adds listing of blocking connections if database can't be deleted
  - Adds project status description to README
  - Adds revocation of role memberships (fixes #37)
  - Better internal code structure
v0.8.0.0
  - Replaces pandoc with doctemplates to halve dependency compile time
    Big thanks to @jgm for implementing doctemplates right away!
    <https://github.com/jgm/pandoc/issues/3134>
  - Adds --delete-residual-roles option (closes #30)
  - Adds --sql-log-hide-rollbacks option (closes #55)
  - Adds Internal libraries to exposed modules
  - Adds dropping of basic role privileges (#37)
  - Changes YamSql objects to Internal.Obj.* (closes #58)
  - Changes to a better SqlObj and SqlContext structure (closes #60)
  - Changes to treat columns as independent objects (closes #33)
  - Updates README
v0.7.0.0
  - Fixes all compiler warnings
  - Fixes several bugs related to ROLE upgrades
  - Fixes table checks missing after upgrade
  - Adds --sql-log flag
  - Adds --version flag
  - Better SQL-Error presentation
  - Better test coverage, now using pytest3
  - Better usage information for CLI
  - Code coverage reports
  - Refactoring of many code parts
  - Removes support for column templates
  - Splits library from binary (cabal)
  - Started API and implementation docs
v0.6.0.0
  - Adds resolve complicated dependency issues
  - Adds resolve change of function return type (if function can be dropped)
  - Changes connection options to suppress SQL NOTICE messages
  - Fixes fundamental logic error in pgsqlUpdateFragile