@@ -1,5 +1,6 @@
 v0.10.0.0 (WIP)
   - Adds support for reading setup.yml from STDIN
+  - Adds "did you mean" for YamSql fields
   - Changes to better support SEQUENCEs
 v0.9.0.0
   - Fixes DELETE BASE before schema definitions are read (#64)
